syntax = "proto3";

option go_package = "./internal/pb/order";
package order;

// protoc --go_out=. .\internal\pb\order\order.proto

message OrderInfo {
  string UserId = 1;
  string SpikeId = 2;
  int64 Quantity = 3;
}
